@@ -88,6 +88,7 @@ def get_rotation(rotation):
 
 _unit_box = lbwh_to_bbox(0,0,1,1)
 
+
 class Text(Artist):
     """
     Handle storing and drawing of text in window or data coordinates
@@ -107,6 +108,38 @@ class Text(Artist):
                  rotation=None,
                  **kwargs
                  ):
+        """
+        Create a Text instance at x,y with string text.  Valid kwargs are
+        
+            alpha: float
+            animated: [True | False]
+            backgroundcolor: any matplotlib color
+            bbox: rectangle prop dict plus key 'pad' which is a pad in points
+            clip_box: a matplotlib.transform.Bbox instance
+            clip_on: [True | False]
+            color: any matplotlib color
+            family: [ 'serif' | 'sans-serif' | 'cursive' | 'fantasy' | 'monospace' ]
+            figure: a matplotlib.figure.Figure instance
+            fontproperties: a matplotlib.font_manager.FontProperties instance
+            horizontalalignment or ha: [ 'center' | 'right' | 'left' ]
+            label: any string
+            lod: [True | False]
+            multialignment: ['left' | 'right' | 'center' ]
+            name or fontname: string eg, ['Sans' | 'Courier' | 'Helvetica' ...]
+            position: (x,y)
+            rotation: [ angle in degrees 'vertical' | 'horizontal'
+            size or fontsize: [ size in points | relative size eg 'smaller', 'x-large' ]
+            style or fontstyle: [ 'normal' | 'italic' | 'oblique']
+            text: string
+            transform: a matplotlib.transform transformation instance
+            variant: [ 'normal' | 'small-caps' ]
+            verticalalignment or va: [ 'center' | 'top' | 'bottom' ]
+            visible: [True | False]
+            weight or fontweight: [ 'normal' | 'bold' | 'heavy' | 'light' | 'ultrabold' | 'ultralight']
+            x: float
+            y: float
+            zorder: any number        
+        """
 
         Artist.__init__(self)
         if not is_string_like(text):
